# LRQM-server

./: .env  .env.var  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.dev.yml  docker-compose.yml  start.sh
data/: postmaster.pid
data/base/1/: 2619
data/base/16384/: 1247  1249  1255  1259  16389  16393  16404  16409  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2690  2691  2703  2704  3455  5002  pg_internal.init
data/global/: 1260  1262  2671  pg_control  pg_internal.init
migrations/: 20250101224446_create_events.up.sql  20250101224743_create_users.up.sql  20250102225212_create_measures.down.sql  20250102225212_create_measures.up.sql  20250309205200_add_contributors_number_to_measure.down.sql  20250309205200_add_contributors_number_to_measure.up.sql
migrations/2024-10-29-202840_create_users/: up.sql
migrations/2024-11-19-160624_create_users/: up.sql
src/: api_config.rs  api_events.rs  api_measures.rs  api_users.rs  db.rs  main.rs  models.rs  schema.rs  schemas.rs
src/models/: event.rs  measure.rs  mod.rs  user.rs
