[package]
name = "lrqm_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.125"
serde = { version = "1.0", features = ["derive"] }
postgres = "0.19.9"
dotenvy = "0.15.7"
axum-macros = "0.4.2"
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "chrono", "bigdecimal" ] }
log = "0.4.22"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = [
  "env-filter",
  "std",
  "fmt",
  "chrono",
  "ansi",
]}
bigdecimal = { version = "0.4.7", features = ["serde"] }
tower-http = { version = "0.5", features = ["trace"] }
utoipa = { version = "5", features = ["chrono"] }
utoipa-axum = "0.2"